Fixes #162, Fixes #163