@@ -6,6 +6,8 @@ import esthesis.platform.backend.server.dto.nifisinks.NiFiSinkDTO;
 import esthesis.platform.backend.server.model.NiFiSink;
 import esthesis.platform.backend.server.nifi.client.dto.NiFiSearchAlgorithm;
 import esthesis.platform.backend.server.nifi.client.services.NiFiClientService;
+import esthesis.platform.backend.server.nifi.client.util.NiFiConstants.Processor.ExistingProcessorSuffix;
+import esthesis.platform.backend.server.nifi.client.util.NiFiConstants.Processor.Type;
 import esthesis.platform.backend.server.nifi.client.util.NiFiConstants.Properties.Values.STATE;
 import esthesis.platform.backend.server.nifi.client.util.NiFiConstants.Properties.Values.STATEMENT_TYPE;
 import esthesis.platform.backend.server.nifi.client.util.NiFiConstants.Properties.Values.SUCCESSFUL_RELATIONSHIP_TYPES;
@@ -17,8 +19,8 @@ import org.yaml.snakeyaml.constructor.Constructor;
 import org.yaml.snakeyaml.representer.Representer;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 
@@ -59,12 +61,12 @@ public class PutDatabaseRecord implements NiFiWriterFactory {
   @Override
   public String getConfigurationTemplate() {
     return
-      "databaseConnectionURL: \n" +
-        "databaseDriverClassName: \n" +
-        "databaseDriverClassLocation: \n" +
-        "databaseUser: \n" +
-        "password: \n" +
-        "schedulingPeriod: ";
+        "databaseConnectionURL: \n" +
+            "databaseDriverClassName: \n" +
+            "databaseDriverClassLocation: \n" +
+            "databaseUser: \n" +
+            "password: \n" +
+            "schedulingPeriod: ";
   }
 
   @Override
@@ -75,20 +77,20 @@ public class PutDatabaseRecord implements NiFiWriterFactory {
     conf = extractConfiguration(niFiSinkDTO.getConfiguration());
 
     String jsonTreeReader = niFiClientService
-      .createJsonTreeReader(niFiSinkDTO.getName() + " [JSON TREE READER] ", path);
+        .createJsonTreeReader(niFiSinkDTO.getName() + " [JSON TREE READER] ", path);
 
     String dbConnectionPool = niFiClientService
-      .createDBConnectionPool(niFiSinkDTO.getName() + " [DB CONNECTION POOL] ",
-        conf.getDatabaseConnectionURL(),
-        conf.getDatabaseDriverClassName(),
-        conf.getDatabaseDriverClassLocation(),
-        conf.getDatabaseUser(),
-        conf.getPassword(), path);
+        .createDBConnectionPool(niFiSinkDTO.getName() + " [DB CONNECTION POOL] ",
+            conf.getDatabaseConnectionURL(),
+            conf.getDatabaseDriverClassName(),
+            conf.getDatabaseDriverClassLocation(),
+            conf.getDatabaseUser(),
+            conf.getPassword(), path);
 
     String putDatabaseRecordId = niFiClientService
-      .createPutDatabaseRecord(niFiSinkDTO.getName(), jsonTreeReader, dbConnectionPool,
-        getStatementType(niFiSinkDTO.getHandler()), conf.getSchedulingPeriod(), path,
-        isCommandHandler);
+        .createPutDatabaseRecord(niFiSinkDTO.getName(), jsonTreeReader, dbConnectionPool,
+            getStatementType(niFiSinkDTO.getHandler()), conf.getSchedulingPeriod(), path,
+            isCommandHandler);
 
     CustomInfo customInfo = new CustomInfo();
     customInfo.setJsonTreeReader(jsonTreeReader);
@@ -97,16 +99,17 @@ public class PutDatabaseRecord implements NiFiWriterFactory {
 
     enableControllerServices(jsonTreeReader, dbConnectionPool);
 
-    if(isCommandHandler) {
+    if (isCommandHandler) {
       Set<String> relationship = new HashSet<>(
-        Arrays.asList(SUCCESSFUL_RELATIONSHIP_TYPES.SUCCESS.getType()));
+          List.of(SUCCESSFUL_RELATIONSHIP_TYPES.SUCCESS.getType()));
 
       String prepareDatabaseOperationId = niFiClientService.findProcessorIDByNameAndProcessGroup(
-        "[PDO]", path,
-        NiFiSearchAlgorithm.NAME_ENDS_WITH);
+          ExistingProcessorSuffix.PREPARE_DATABASE_OPERATION, path,
+          NiFiSearchAlgorithm.NAME_ENDS_WITH);
 
-      niFiClientService.connectComponentsInSameGroup(path, prepareDatabaseOperationId, putDatabaseRecordId
-       ,relationship);
+      niFiClientService.connectComponentsInSameGroup(path, prepareDatabaseOperationId,
+          putDatabaseRecordId
+          , relationship);
 
       niFiClientService.changeProcessorGroupState(path, STATE.RUNNING);
 
@@ -114,6 +117,13 @@ public class PutDatabaseRecord implements NiFiWriterFactory {
         niFiClientService.changeProcessorStatus(niFiSinkDTO.getName(), path, STATE.STOPPED);
       }
     }
+
+    if (!isCommandHandler) {
+      manageConnectionWithClearQueueProcessor(path);
+    } else {
+      toggleQueueClearerConnectionForCommandWriter(path);
+    }
+
   }
 
   @Override
@@ -122,35 +132,46 @@ public class PutDatabaseRecord implements NiFiWriterFactory {
     conf = extractConfiguration(sinkDTO.getConfiguration());
 
     if (!(Objects.equals(conf.getDatabaseConnectionURL(), prevConf.getDatabaseConnectionURL())
-      && Objects.equals(conf.getDatabaseDriverClassName(), prevConf.getDatabaseDriverClassName())
-      && Objects.equals(conf.getDatabaseDriverClassLocation(),
-      prevConf.getDatabaseDriverClassLocation())
-      && Objects.equals(conf.getDatabaseUser(), prevConf.getDatabaseUser())
-      && Objects.equals(conf.getPassword(), prevConf.getPassword()))) {
+        && Objects.equals(conf.getDatabaseDriverClassName(), prevConf.getDatabaseDriverClassName())
+        && Objects.equals(conf.getDatabaseDriverClassLocation(),
+        prevConf.getDatabaseDriverClassLocation())
+        && Objects.equals(conf.getDatabaseUser(), prevConf.getDatabaseUser())
+        && Objects.equals(conf.getPassword(), prevConf.getPassword()))) {
 
       CustomInfo customInfo = objectMapper.readValue(sink.getCustomInfo(), CustomInfo.class);
       niFiClientService
-        .updateDBCConnectionPool(customInfo.getDbConnectionPool(), conf.getDatabaseConnectionURL(),
-          conf.getDatabaseDriverClassName(),
-          conf.getDatabaseDriverClassLocation(),
-          conf.getDatabaseUser(),
-          conf.getPassword());
+          .updateDBCConnectionPool(customInfo.getDbConnectionPool(),
+              conf.getDatabaseConnectionURL(),
+              conf.getDatabaseDriverClassName(),
+              conf.getDatabaseDriverClassLocation(),
+              conf.getDatabaseUser(),
+              conf.getPassword());
     }
 
     String processorId = niFiClientService.findProcessorIDByNameAndProcessGroup(sink.getName(),
-      path);
+        path);
 
     niFiClientService.updatePutDatabaseRecord(processorId, sinkDTO.getName(),
-      getStatementType(sinkDTO.getHandler()), conf.getSchedulingPeriod());
+        getStatementType(sinkDTO.getHandler()), conf.getSchedulingPeriod());
   }
 
   @Override
   public void deleteSink(NiFiSinkDTO niFiSinkDTO, String[] path) throws IOException {
+    boolean isCommandHandler = niFiSinkDTO.getHandler() == NIFI_SINK_HANDLER.COMMAND.getType();
+
     if (niFiSinkDTO.getHandler() == NIFI_SINK_HANDLER.COMMAND.getType()) {
       niFiClientService.changeProcessorGroupState(path, STATE.STOPPED);
     }
+
     niFiClientService.deleteProcessor(niFiSinkDTO.getName(), path);
     deleteControllerServices(niFiSinkDTO);
+
+    if (!isCommandHandler) {
+      manageConnectionWithClearQueueProcessor(path);
+    } else {
+      toggleQueueClearerConnectionForCommandWriter(path);
+    }
+
   }
 
   private void deleteControllerServices(NiFiSinkDTO niFiSinkDTO) throws IOException {
@@ -164,7 +185,7 @@ public class PutDatabaseRecord implements NiFiWriterFactory {
 
   @Override
   public void toggleSink(String name, String[] path, boolean isEnabled) throws IOException {
-    niFiClientService.changeProcessorStatus(name, path,    isEnabled ? STATE.RUNNING : STATE.STOPPED);
+    niFiClientService.changeProcessorStatus(name, path, isEnabled ? STATE.RUNNING : STATE.STOPPED);
   }
 
   @Override
@@ -189,24 +210,29 @@ public class PutDatabaseRecord implements NiFiWriterFactory {
     return niFiClientService.isProcessorRunning(name, path);
   }
 
+  @Override
+  public void manageConnectionWithClearQueueProcessor(String[] path) throws IOException {
+    niFiClientService.manageQueueHandling(path, Type.PUT_DATABASE_RECORD);
+  }
+
+  private void toggleQueueClearerConnectionForCommandWriter(String[] path) throws IOException {
+    niFiClientService.manageQueueHandling(path, Type.PUT_DATABASE_RECORD, true);
+  }
+
   private PutDatabaseRecordConfiguration extractConfiguration(String configuration) {
     Representer representer = new Representer();
     representer.getPropertyUtils().setSkipMissingProperties(true);
     return new Yaml(new Constructor(PutDatabaseRecordConfiguration.class),
-      representer)
-      .load(configuration);
+        representer)
+        .load(configuration);
   }
 
   private STATEMENT_TYPE getStatementType(int handler) {
     NIFI_SINK_HANDLER nifiSinkHandler = NIFI_SINK_HANDLER.valueOf(handler);
-    switch (nifiSinkHandler) {
-      case TELEMETRY:
-      case COMMAND:
-        return STATEMENT_TYPE.INSERT;
-      case METADATA:
-        return STATEMENT_TYPE.UPDATE;
-      default:
-        return STATEMENT_TYPE.USE_STATE_ATTRIBUTE;
-    }
+    return switch (nifiSinkHandler) {
+      case TELEMETRY, COMMAND -> STATEMENT_TYPE.INSERT;
+      case METADATA -> STATEMENT_TYPE.UPDATE;
+      default -> STATEMENT_TYPE.USE_STATE_ATTRIBUTE;
+    };
   }
 }
